Removed irrelevant urls and fixed the most of the whitespace error

--- a/src/sass/sections.sass
+++ b/src/sass/sections.sass
@@ -52,9 +52,11 @@ canvas.tsparticles-canvas-el
     .section-home
         height: 65vh
     canvas.tsparticles-canvas-el
-        height: 42vh !important
-        transform: scale(2) !important
-        width: 100% !important
+        height: 100% !important
+        // transform: scale(2) !important
+        // width: 100% !important
+        width: auto
+        overflow-x: hidden !important
     .blog-post-content
         font-size: 1.3em !important
 
